--- a/state/governor/style/gov_1366.css
+++ b/state/governor/style/gov_1366.css
@@ -30,6 +30,10 @@
   width: 50%;
 }
 
+.titleBreak {
+  display: initial;
+}
+
 .menuBar {
   display: none;
 }
