--- a/state/governor/style/gov_1920.css
+++ b/state/governor/style/gov_1920.css
@@ -44,6 +44,10 @@ body {
   font-size: 3.5rem;
 }
 
+.titleBreak {
+  display: initial;
+}
+
 .menuBar {
   display: none;
 }
